--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="col-md-8">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-				<h2></h2>
+				<h2>About Me</h2>
 				</div>
 				<div class="panel-body">
 					<img src="assets/images/chloe.jpg" alt="my daughter chloe!" style="width:33%; float:left; margin:5px 10px 0 5px">
