--- a/index.html
+++ b/index.html
@@ -37,16 +37,11 @@
 				<div class="panel-body">
 					<img src="assets/images/chloe.jpg" alt="my daughter chloe!" style="width:33%; float:left; margin:5px 10px 0 5px">
 
-					I'm Brick Tamland. People seem to like me because I am polite and I am rarely late. I like to eat ice cream and I really enjoy a nice pair of slacks. Years later, a doctor will tell me that I have an I.Q. of 48 and am what some people call mentally retarded.
-			
-					</p>
-					<p>People call me the Bry man; I'm the stylish one of the group. I know what you're asking yourself and the answer is yes. I have a nick name for my penis. Its called the Octagon, but I also nick named my testes - my left one is James Westfall and my right one is Doctor Kenneth Noisewater. You ladies play your cards right you just might get to meet the whole.
-					</p>
-
-					<p>Champ here! I'm all about havin' fun. You know, get a couple cocktails in me, start a fire in someone's kitchen. Maybe go to SeaWorld, take my pants off. Anyway, I kinda known for my catch phrase WHAMMY! As in Gene Tenace at the plate... iiittt WHAMMY! WHAMMY!<br>
-		
-
-					<br>-Anchorman: The Legend of Ron Burgandy :)
+					<p>My name is Gina Assar.<br>
+					My father was a computer engineering and I've grown up with a passion for computers and how they work.<br>
+					 I attended UC Berkeley's Coding Boot Camp. <br>
+					 I was born in San Francisco and love that I grew up around all this booming technology.<br>
+					  I'm working on furthering my eduction pursuing my Bachelor's in Computer Science.
 					</p>
 				</div>
 			</div>
@@ -77,6 +72,6 @@
 <div class="navbar navbar-default navbar-fixed-bottom">
 	<div class="container">
   <footer class="navbar-text pull-left" style="color:white">
-  &copy; Copyright 2017 Gina Assar</footer>
+  &copy; Copyright 2019 Gina Assar</footer>
 </body>
 </html>
