--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
                         <div class="row" style="padding:10px">
                             <div class="col-md-6">
                                 <a href="https://github.com/gxb415/hangmanCLI.git">
-                                    <img src="assets/images/hangman.jpg" class="hang" width="240px">
+                                    <img src="assets/images/hangman3.jpg" class="hang" width="240px">
                                     <h4 id="hang">Hangman</h4>
                                 </a>
                             </div>
